# ch_queries

./: CLAUDE.md  LICENSE  README.md  TODO.md  ch_queries.install  ch_queries.opam  dune  dune-project  functions-to-add.sh  queries.opam
.claude/: settings.local.json
.claude/commands/: add-new-function.md
.claude/skills/ch-queries-usage/: SKILL.md
.github/workflows/: main.yml
ch_queries/: ch_queries.ml  ch_queries.mli  dune
ch_queries_catalog/: ch_queries_catalog.ml  ch_queries_catalog.mli  dune
ch_queries_ppx/: ch_queries_ppx.ml  ch_queries_ppx.mli  dune
ch_queries_syntax/: dune  eq_class.ml  eq_class.mli  lexer.mli  lexer.mll  loc.ml  parser.mly  printer.ml  printer.mli  syntax.ml  syntax.mli  ulexer.mli  ulexer.mll  uparser.mly
lib/: dune  lexer.mll  loc.ml  parser.mly  printer.ml  queries.ml  queries.mli  syntax.ml
ppx/: dune  ppx_queries.ml
queries/: dune  queries.ml  queries.mli
queries_ppx/: dune  ppx_queries.ml  queries_ppx.ml
queries_syntax/: dune  lexer.mll  parser.mly  printer.ml  syntax.ml  type_lexer.mll  type_parser.mly  ulexer.mll  uparser.mly
test/: compile_and_run  compile_and_run_simple  dune  test_catalog.ml  test_catalog.t  test_ch_param.t  test_cluster.t  test_comments.t  test_conditionals.t  test_cte.t  test_dictget.t  test_eq.t  test_expr.t  test_expr_ascribe.t  test_expr_scope_param.t  test_expr_timestamp.t  test_expr_unsafe.t  test_float.t  test_function_IPv4NumToString.t  test_function_IPv4NumToStringClassC.t  test_function_YYYYMMDDToDate.t  test_function_accurateCastOrNull.t  test_function_addNanoseconds.t  test_function_age.t  test_function_alphaTokens.t  test_function_appendTrailingCharIfAbsent.t  test_function_arrayAUCPR.t  test_function_arrayAll.t  test_function_arrayAvg.t  test_function_arrayCompact.t  test_function_arrayConcat.t  test_function_arrayCount.t  test_function_arrayCumSum.t  test_function_arrayCumSumNonNegative.t  test_function_arrayDistinct.t  test_function_arrayDotProduct.t  test_function_arrayEnumerate.t  test_function_arrayEnumerateDense.t  test_function_arrayEnumerateDenseRanked.t  test_function_arrayEnumerateUniq.t  (+265 more)
