(library
 (public_name ch_queries.ppx)
 (name ch_queries_ppx)
 (libraries ppxlib ch_queries.syntax)
 (kind ppx_rewriter)
 (flags
  (:standard -open ContainersLabels))
 (ppx_runtime_libraries ch_queries)
 (modules :standard \ main)
 (preprocess
  (pps ppxlib.metaquot ppx_compare)))

(executable
 (name main)
 (public_name ch_queries_ppx)
 (modules main)
 (libraries ch_queries.ppx ppxlib))
